# thss-2025-compiler-final

./: CMakeLists.txt  SysYLexer.g4  SysYParser.g4
include/: IR.h  IRBuilder.h  IRGenerator.h  README.md  SymbolTable.h  Type.h
src/: main.cpp
src/antlr/: SysYLexer.cpp  SysYLexer.h  SysYLexer.interp  SysYParser.cpp  SysYParser.h  SysYParser.interp  SysYParser.tokens  SysYParserBaseVisitor.cpp  SysYParserBaseVisitor.h  SysYParserVisitor.cpp  SysYParserVisitor.h
test/resources/functional/: 01_var_defn2.ll  04_arr_defn3.ll  05_arr_defn4.ll  09_func_defn.ll  10_var_defn_func.ll  12_addc.ll  14_subc.ll  19_mod.ll  21_if_test2.ll  34_arr_expr_len.ll  38_op_priority4.ll  39_op_priority5.ll  42_empty_stmt.ll  43_logi_assign.ll  44_stmt_expr.ll  49_if_complex_expr.ll  50_short_circuit.ll  51_short_circuit3.ll  52_scope.ll  53_scope2.ll  54_hidden_var.ll  55_sort_test1.ll  56_sort_test2.ll  57_sort_test3.ll  58_sort_test4.ll  59_sort_test5.ll  60_sort_test6.ll  61_sort_test7.ll  62_percolation.ll  63_big_int_mul.ll  64_calculator.ll  65_color.ll  66_exgcd.ll  67_reverse_output.ll  68_brainfk.ll  70_dijkstra.ll  71_full_conn.ll  72_hanoi.ll  73_int_io.ll  74_kmp.ll  (+15 more)
